pauses docs
